# MSU_CMC_SQL_interpreter

./: CMakeLists.txt  README.md  run_client.cpp  run_server.cpp
assistive/: help_info.txt  welcome.txt
src/: CMakeLists.txt
src/analyze/: CMakeLists.txt  analyze.cpp  analyze.h
src/client/: CMakeLists.txt  client.cpp  client.h
src/exeption/: CMakeLists.txt
src/server/: CMakeLists.txt  server.cpp  server.h  sever_interface.cpp  sever_interface.h
src/table/: CMakeLists.txt  table.h
tests/: CMakeLists.txt  analyze_test.cpp  connection_test.cpp
